
	* gsint.h: Add shell_escape prototype.
	* util.c (shell_escape): New function to escape filenames for
	shell usage.
	* util.c (is_open): Use shell_escape to expand command buffer.

	* main.c (main): Use single quotes when building command string,
	and use shell_escape to quote contents.

	* util.c (escape_string): Check return code of xmalloc.

2009-03-28  Tim Retout  <diocles@gnu.org>

	* psgen.c (recognize_eps_file): Remove ability to read EPS data
	from a pipe, as this executes arbitrary commands.  It has been
	disabled in most distros for five years anyway.  See
	CAN-2004-1185.

	* psgen.c (dump_ps_page_header): Use basename() and dirname() to
	split path.  Fixes a buffer overflow - see CAN-2004-1186.

2009-01-25  Tim Retout  <diocles@gnu.org>

	* main.c (main): Respect $HOME when searching for ~/.enscriptrc

2008-01-01  Tim Retout  <diocles@gnu.org>

	* ChangeLog: Run M-x change-log-redate. Add copyright notice at end.

	* main.c (usage): Use PACKAGE_BUGREPORT instead of hardcoding the bug
	report address.

	* main.c (main) <toc>: Remove an unnecessary fclose of the toc
	temporary file, which was breaking the --toc option.

1999-09-17  Markku Rossi  <mtr@amme.ssh.fi>

	* main.c (handle_options): New option --footer to set the page
	footer string.
	(main): Modified the config file reading to be more user-tolerant.
	If the config file reading still fails, the enscript prints a
	verbose error message describing the situation.  Enscript also
	suggest some workarounds for the problem.  Hopefully this helps
	users to overcome their problems concerning the installation of
	the program.

	* psgen.c (dump_ps_page_header): Added support for user supplied
	footer strings.

	* main.c: Removed the obsolete --list-options option.

1999-09-13  Markku Rossi  <mtr@amme.ssh.fi>

	* main.c (handle_options): New option --extended-return-values to
	enable the extended return values.

1999-09-07  Markku Rossi  <mtr@amme.ssh.fi>
